# clean-web-economy

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE-AGPL-3.0.txt  LICENSE-MPL-2.0.txt  PATENT-PLEDGE.md  README.md  ROADMAP.md  SECURITY.MD  clean_web_economy_developer_friendly_specification.md  clean_web_economy_technical_architecture_blueprint.md  clean_web_economy_technical_governance_specification.md  project-map.html  project-map.js  risk_and_compliance_audit.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
articles/: cwe_for_wired.tex  cwe_in_depth_design_exposition.aux  cwe_in_depth_design_exposition.out  cwe_in_depth_design_exposition.tex  cwe_in_depth_design_exposition.toc
chain/: foundry.toml
chain/contracts/: AcceptAllVerifier.sol  CWEConsumption.sol  CWEEscrow.sol  CWEIdentity.sol  CWEJury.sol  CWEPayouts.sol  CWERegistry.sol  CWETiers.sol  CredentialTypes.sol  EarliestRegistrationArbiter.sol  ICWERegistry.sol
chain/contracts/interfaces/: IArbiter.sol  ICWEConsumption.sol  ICWEEscrow.sol  ICWEIdentity.sol  ICWEPayouts.sol  ICWERegistry.sol  ICWETiers.sol  IJury.sol  IProofVerifier.sol
chain/contracts/utils/: MerkleProof.sol  Ownable.sol  ReentrancyGuard.sol
chain/script/: Deploy.s.sol
chain/test/: CWEConsumption.t.sol  CWEEscrow.t.sol  CWEIdentity.t.sol  CWEJury.t.sol  CWEPayouts.t.sol  CWERegistry.t.sol  CWETiers.t.sol
clients/browser-ext/: README.md  build.mjs  manifest.json  package-lock.json  package.json  playwright.config.mjs
clients/browser-ext/core/: Cargo.toml
clients/browser-ext/core/src/: lib.rs
clients/browser-ext/src/: background.js  background.ts  content-script.js  content-script.ts  hub.js  options.html  options.js  policy.js  popup.html  popup.js
clients/browser-ext/test/: hub.test.mjs  policy.test.mjs
clients/browser-ext/test/e2e/: extension.spec.mjs
clients/player-plugin/: Cargo.toml  README.md
clients/player-plugin/src/: config.rs  decode.rs  lib.rs  main.rs  policy.rs  recognize.rs  session.rs  settle.rs
docs/: README.md  architecture_blueprint_v0.1.md  clean-web-economy-instructions.md  dev_friendly_spec_v0.2.md  governance_charter_v0.1.md  risk_and_compliance_v0.1.md  roadmap.md  spec_clean_web_economy_v0.2.md  tech_gov_spec_v0.1.md
docs/faq/: digital_albums_ownership.md  piracy_and_CWE.md  storage_erasure_coding.md  volunteers_needed.md
docs/issues/: 001-threat-model.md  002-hsm-keys.md  003-zk-benchmarks.md  004-fingerprint-tests.md  005-legal-templates.md
docs/leaflets/: why_join_onepager.md  why_join_onepager.typ
docs/ops/: Makefile
docs/plans/: phase1_demo.md  phase1_mvp_music_implementation_plan.md
docs/promo/: explainer_script.md  pitch_deck.md  pitch_deck.typ  resilience_summary.md
docs/specs/: Collaborator_split_and_royalty_flow_specification.md  DAPR_usage_aggregation_protocol.md  DMF_Federation_Microservice_Protocol_Specification.md  access_microservice_api_specification.md  anti-fraud_and_bandwidth_receipt_protocol.md  client-storage_handshake_specification.md  client_architecture_specification.md  client_threat_model.md  content_manifest_and_creator_registration_specification.md  creator_threat_model.md  discovery_layer_privacy_and_ranking_specification.md  epoch_beacon_specification.md  fingerprinting_specification.md  governance_no-drm_clause.md  legal_interoperability_guidelines.md  rollup_aggregation_and_settlement_Interface_specification.md  tier_capability_token_format.md  zk_usage_proof_requirements.md
docs/superpowers/plans/: 2026-07-21-discovery-hub-mvp.md  2026-07-21-recognition-and-ownership.md  2026-07-22-arbitration-jury.md  2026-07-22-full-dapr-antifraud.md  2026-07-22-player-plugin.md  2026-07-24-verifiable-credentials.md
docs/superpowers/specs/: 2026-07-21-discovery-hub-mvp-design.md  2026-07-21-player-plugin-mvp-design.md  2026-07-21-recognition-and-ownership-design.md  2026-07-22-arbitration-jury-design.md  2026-07-22-full-dapr-antifraud-design.md  2026-07-24-verifiable-credentials-design.md
libs/fingerprint/: Cargo.toml  README.md
libs/fingerprint/src/: index.ts  lib.rs
libs/wallet-zk/: Cargo.toml  README.md
libs/wallet-zk/src/: commit.rs  index.ts  lib.rs  session.rs  zk.rs
ops/: Makefile  docker-compose.dev.yml
ops/demo/: run_arbitration_demo.sh  run_demo.sh  run_hub_demo.sh  run_identity_demo.sh  run_ownership_demo.sh  run_player_demo.sh
rfcs/: 0000-template.md  README.md
services/discovery-hub/: Cargo.toml  README.md
services/discovery-hub/src/: api.rs  chain.rs  config.rs  index.rs  lib.rs  main.rs  manifest.rs
services/settlement/: Cargo.toml
services/settlement/src/: chain.rs  config.rs  disclosure.rs  lib.rs  main.rs  merkle.rs  settle.rs
sims/: Cargo.toml  README.md  sample_usage.csv
sims/fixtures/: basic.json  basic_expected.json  multi_user.json  multi_user_expected.json  region_factors.json  region_factors_expected.json  single_work.json  single_work_expected.json  zero_value.json  zero_value_expected.json
sims/src/: lib.rs
sims/tests/: fixtures.rs
specs/chain/: CHAIN-ARCHITECTURE.md  CHAIN-SYSTEM-REQUIREMENTS.md
specs/openapi/: discovery-hub.yaml
