# WP3 — the CWE fingerprint library.
#
# A Haitsma-Kalker acoustic fingerprint: gain-invariant sub-fingerprint bits
# derived from per-band energy differences, compared by Hamming similarity.
# It is a modest, dependency-light *fallback* recogniser — production-grade
# robustness (Chromaprint/AcoustID) is future work.
[package]
name = "cwe-fingerprint"
version.workspace = true       # inherit the shared workspace version
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Haitsma-Kalker acoustic fingerprint (gain-invariant, Hamming-compared) for the Clean Web Economy"

[dependencies]
rustfft.workspace = true       # FFT backend for the per-frame band energies
hex.workspace = true           # render the fingerprint as the fp:<hex> textual form
thiserror.workspace = true     # typed parse errors (FingerprintError)
tiny-keccak.workspace = true   # keccak256 for the compact id()
